--- a/app/src/main/res/layout/payment_information.xml
+++ b/app/src/main/res/layout/payment_information.xml
@@ -18,6 +18,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_below="@+id/logo"
@@ -50,7 +51,11 @@
         android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/header"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="50dp"
+
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="10dp">
 
@@ -59,7 +64,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
+            android:padding="4dp"
             android:background="@drawable/cardview_infoshow"
             android:orientation="vertical">
 
